Really adding new emacs setup :)

--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,6 @@ vim/.netrw*
 #Emacs
 emacs/elpa
 emacs/auto-save-list
-emacs/*.dat
-emacs/*.bkp
-emacs/*.cache
-emacs/*.eld
 emacs/ido.last
 emacs/eshell
+emacs/\.*
